deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogo-api
  labels:
    app: catalogo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalogo-api
  template:
    metadata:
      labels:
        app: catalogo-api
    spec:
      containers:
      - name: catalogo-api
        image: ghcr.io/daniel-pinna/catalogo-api-image:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
