service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogo-api
spec:
  type: ClusterIP
  selector:
    app: catalogo-api
  ports:
  - port: 80
    targetPort: 8080
